[gd_scene load_steps=7 format=2]

[ext_resource path="res://mandy/Screens/cup-1614530_1920.png" type="Texture" id=1]
[ext_resource path="res://Player/UI/Ubuntu-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://mandy/Screens/Endscreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 280
outline_color = Color( 0.101961, 0.882353, 0.662745, 1 )
extra_spacing_top = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 280
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 280
font_data = ExtResource( 2 )

[node name="Winscreen" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 477.0
margin_top = 636.0
margin_right = 5421.0
margin_bottom = 5419.0
rect_scale = Vector2( 0.173, 0.147 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scull" type="TextureRect" parent="VBoxContainer"]
margin_right = 4944.0
margin_bottom = 1920.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 1924.0
margin_right = 4944.0
margin_bottom = 4783.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterRow"]
margin_right = 4944.0
margin_bottom = 2859.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EndMessage" type="Label" parent="VBoxContainer/CenterRow/VBoxContainer"]
margin_right = 4944.0
margin_bottom = 651.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.733333, 0.807843, 0.364706, 1 )
text = "Winner!!!
You destroyed all bots."
align = 1
max_lines_visible = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerScore" type="HBoxContainer" parent="VBoxContainer/CenterRow/VBoxContainer"]
margin_top = 655.0
margin_right = 4944.0
margin_bottom = 2559.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterRow/VBoxContainer/PlayerScore"]
margin_left = 2472.0
margin_right = 2472.0
margin_bottom = 1904.0
alignment = 1

[node name="HitScore" type="Label" parent="VBoxContainer/CenterRow/VBoxContainer/PlayerScore/VBoxContainer"]
margin_bottom = 314.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="ColorScore" type="Label" parent="VBoxContainer/CenterRow/VBoxContainer/PlayerScore/VBoxContainer"]
margin_top = 318.0
margin_bottom = 632.0
custom_fonts/font = SubResource( 3 )
align = 1

[node name="yellowBot" type="Label" parent="VBoxContainer/CenterRow/VBoxContainer/PlayerScore/VBoxContainer"]
margin_top = 636.0
margin_bottom = 950.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.513726, 0.0117647, 0.0117647, 1 )
align = 1

[node name="blueBot" type="Label" parent="VBoxContainer/CenterRow/VBoxContainer/PlayerScore/VBoxContainer"]
margin_top = 954.0
margin_bottom = 1268.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.513726, 0.0117647, 0.0117647, 1 )
align = 1

[node name="redBot" type="Label" parent="VBoxContainer/CenterRow/VBoxContainer/PlayerScore/VBoxContainer"]
margin_top = 1272.0
margin_bottom = 1586.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.513726, 0.0117647, 0.0117647, 1 )
align = 1

[node name="greenBot" type="Label" parent="VBoxContainer/CenterRow/VBoxContainer/PlayerScore/VBoxContainer"]
margin_top = 1590.0
margin_bottom = 1904.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.513726, 0.0117647, 0.0117647, 1 )
align = 1
